add a maker to generate an empty widget

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -23,3 +23,6 @@ services:
             - '@doctrine.orm.entity_manager'
             - '@security.token_storage'
             - [!tagged lle_dashboard.widget]
+
+    Lle\DashboardBundle\Maker\MakeWidget:
+        tags: [maker.command]
