Gestion des droits sur les widgets 2le/arhon#827

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -26,3 +26,7 @@ services:
 
     Lle\DashboardBundle\Maker\MakeWidget:
         tags: [maker.command]
+
+    Lle\DashboardBundle\Widgets\AbstractWidget:
+        calls:
+            - setSecurity: ['@security.authorization_checker']
