--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     },
     "dependencies": {},
     "devDependencies": {
+        "@babel/core": "^7.19.1",
+        "@babel/preset-env": "^7.19.1",
         "@fortawesome/fontawesome-free": "^5.8.1",
-        "@symfony/webpack-encore": "^1.1.1",
+        "@symfony/webpack-encore": "^4.0.0",
         "gridstack": "^6.0.1",
-        "node-sass": "^4.9.4",
-        "sass-loader": "^11.0.1",
+        "node-sass": "^7.0.3",
+        "sass-loader": "^12.6.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
         "webpack-rtl-plugin": "^2.0.0"
     }
 }
