--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
             "Lle\\DashboardBundle\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
