--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,16 @@
     "require": {
         "php": ">=7.2",
         "friendsofsymfony/jsrouting-bundle": "^2.2 || ^2.7 || ^3.0",
-        "sensio/framework-extra-bundle": ">=5.2"
+        "sensio/framework-extra-bundle": "^6.0",
+        "doctrine/doctrine-bundle": "^2.10"
     },
     "autoload": {
         "psr-4": {
             "Lle\\DashboardBundle\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "symfony/maker-bundle": "^1.50"
+    }
 }
