--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "php": ">=7.2",
         "friendsofsymfony/jsrouting-bundle": "^2.2 || ^2.7 || ^3.0",
         "sensio/framework-extra-bundle": "^6.0",
-        "doctrine/doctrine-bundle": "^2.10"
+        "doctrine/doctrine-bundle": "^2.10",
+        "doctrine/orm": "^2.10",
+        "symfony/security-bundle": "^6.3"
     },
     "autoload": {
         "psr-4": {
