--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "sensio/framework-extra-bundle": "^6.0",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/orm": "^2.10",
-        "symfony/security-bundle": "^6.3"
+        "symfony/security-bundle": "^6.0",
+        "symfony/form": "^6.0"
     },
     "autoload": {
         "psr-4": {
