--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/orm": "^2.10",
         "symfony/security-bundle": "^6.0",
-        "symfony/form": "^6.0"
+        "symfony/form": "^6.0",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
