Start creating stats widget 2le/crudit#347

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -47,3 +47,7 @@ services:
         resource: '../../Widgets'
         tags: ['lle_dashboard.widget']
         exclude: '../..Widgets/AbstractWidget.php'
+
+    Lle\DashboardBundle\Widgets\Stats:
+        arguments:
+            - !tagged_iterator lle_dashboard.data_provider
