--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
         "@babel/preset-env": "^7.19.1",
         "@fortawesome/fontawesome-free": "^5.8.1",
         "@symfony/webpack-encore": "^4.0.0",
+        "chart.js": "^4.4.0",
         "gridstack": "^6.0.1",
         "node-sass": "^7.0.3",
-        "sass-loader": "^12.6.0",
+        "sass-loader": "^13.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-rtl-plugin": "^2.0.0"
