--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -48,5 +48,5 @@ services:
         tags: ['lle_dashboard.widget']
         exclude: '../..Widgets/AbstractWidget.php'
 
-    Lle\DashboardBundle\Widgets\Stats:
-        arguments: [!tagged_iterator { tag: 'lle_dashboard.data_provider', index_by: 'key' }]
+    Lle\DashboardBundle\Widgets\ChartWidget:
+        arguments: [!tagged_iterator { tag: 'lle_dashboard.chart_provider', index_by: 'key' }]
