Fix deprecated 2le/crudit#365

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -13,7 +13,7 @@ services:
         autowire: false
         autoconfigure: false
         calls:
-            - setSecurity: ['@Symfony\Component\Security\Core\Security']
+            - setSecurity: ['@Symfony\Bundle\SecurityBundle\Security']
             - setTwig: ['@twig']
             - setFormFactory: ['@form.factory']
 
