--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/security-bundle": "^6.0",
         "symfony/form": "^6.0",
         "twig/twig": "^3.0",
-        "symfony/ux-chartjs": "^2.0"
+        "symfony/ux-chartjs": "^2.0",
+        "symfony/dom-crawler": "^6.0"
     },
     "autoload": {
         "psr-4": {
