Add SF7 compatibility

--- a/src/Resources/config/routes.yaml
+++ b/src/Resources/config/routes.yaml
@@ -1,4 +1,4 @@
 dashbord_routes:
     resource: '@LleDashboardBundle/Controller/DashboardController.php'
     prefix: /dashboard
-    type: annotation
+    type: attribute
