SF8 compatiblity 2le/crudit#578

--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -14,5 +14,8 @@ parameters:
         - ../tests
     excludes_analyse:
         - '../src/Resources/skeleton'
-    checkMissingIterableValueType: false
-    checkGenericClassInNonGenericObjectType: false
+    ignoreErrors:
+        -
+            identifier: missingType.iterableValue
+        -
+            identifier: missingType.generics
