--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "friendsofsymfony/jsrouting-bundle": "^2.2 || ^2.7 || ^3.0",
+        "php": "^8.4",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/orm": "^2.10",
-        "symfony/security-bundle": "^6.0 || ^7.0",
-        "symfony/form": "^6.0 || ^7.0",
-        "twig/twig": "^3.0",
+        "friendsofsymfony/jsrouting-bundle": "^2.2 || ^2.7 || ^3.0",
+        "symfony/dom-crawler": "^7.0 || ^8.0",
+        "symfony/form": "^7.0 || ^8.0",
+        "symfony/security-bundle": "^7.0 || ^8.0",
         "symfony/ux-chartjs": "^2.0",
-        "symfony/dom-crawler": "^6.0 || ^7.0"
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
