--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@symfony/webpack-encore": "^4.0.0",
         "chart.js": "^4.4.0",
         "gridstack": "^6.0.1",
-        "node-sass": "^7.0.3",
+        "sass": "^1.97.0",
         "sass-loader": "^13.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
